--- a/web/src/styles/globals.css
+++ b/web/src/styles/globals.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 html,
 body {
   padding: 0;
@@ -11,29 +15,26 @@ body {
   box-sizing: border-box;
 }
 
+header {
+  height: 70px;
+  background-color: #f4f7fa80;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  width: 100vw;
+  padding: 0 20vw;
+}
+
+nav a {
+  color: var(--color-grey7);
+  text-decoration: none;
+}
+
 main {
   padding-top: 80px;
   width: 60vw;
   margin: 0 20vw;
-}
-
-nav {
-  height: 60px;
-  /* background-color: var(--color-background); */
-  background-color: var(--color-main1);
-  opacity: 0.8;
-  padding: 0 20vw;
-  display: flex;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  box-sizing: content-box;
-}
-
-a {
-  color: var(--color-white);
-  text-decoration: none;
 }
 
 @font-face {
