--- a/web/src/components/Footer.module.scss
+++ b/web/src/components/Footer.module.scss
@@ -11,13 +11,30 @@
     width: 60%;
     margin: 0 auto;
     margin-bottom: 350px;
-    padding: 40px 0;
+    padding: 40px 0 0 0;
   }
 
   .company {
-    border: solid red;
     width: 200px;
-    margin: 0 30px 0 0;
+    margin: auto 30px auto 0;
+
+    .logo {
+      width: 180px;
+      height: auto;
+      aspect-ratio: 394 / 109;
+      position: relative;
+      margin: 0 auto;
+    }
+    p {
+      padding: 0;
+      margin: 0;
+
+      color: var(--color-grey5);
+      font-weight: 600;
+      display: block;
+      letter-spacing: 1px;
+      text-align: center;
+    }
   }
 
   ul {
@@ -54,6 +71,15 @@
           font-weight: 600;
         }
       }
+    }
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .footer {
+    height: 200px;
+    .content {
+      width: 95%;
     }
   }
 }
