--- a/web/src/styles/globals.css
+++ b/web/src/styles/globals.css
@@ -19,12 +19,14 @@ main {
   padding: 80px 0 0 0;
   margin: 0 20vw 40px 20vw;
   width: 60vw;
+  min-height: 100vh;
 }
 /* 타블렛 이하 */
 @media screen and (max-width: 1023px) {
   main {
     width: 90vw;
     margin: 0 5vw 300px 5vw;
+    min-height: 100vh;
   }
 }
 
