--- a/web/src/components/Footer.module.scss
+++ b/web/src/components/Footer.module.scss
@@ -64,11 +64,13 @@
         color: var(--color-grey5);
         font-size: 16px;
         font-weight: 400;
+        letter-spacing: 1px;
 
         span:first-child {
           display: inline-block;
           width: 80px;
           font-weight: 600;
+          letter-spacing: 1.5px;
         }
       }
     }
