--- a/web/src/containers/FAQ/faq.module.scss
+++ b/web/src/containers/FAQ/faq.module.scss
@@ -12,23 +12,55 @@ h1.title {
   margin-top: 15px;
 
   .item {
-    border: solid black;
+    border: 0.5px solid var(--color-grey4);
+    border-radius: 10px;
+    padding: 20px 30px;
+    margin-bottom: 20px;
+
     p {
       margin: 0;
       padding: 0;
+      letter-spacing: 0.05px;
     }
 
-    & hr:first-of-type {
-      color: red;
-      width: 50%;
-      border: 0;
+    > hr:first-of-type {
+      border: 0.5px solid var(--color-grey5);
+      width: 100%;
     }
 
     .question {
       font-size: 24px;
+      font-weight: 600;
+      // display: inline-block;
+      width: 100%;
+      cursor: pointer;
+
+      display: flex;
+      align-items: center;
+
+      > span:first-of-type {
+        color: var(--color-main1);
+        font-weight: 700;
+        font-size: 26px;
+        margin-right: 12px;
+      }
+      svg {
+        color: var(--color-main2);
+        height: 32px;
+        align-items: center;
+        justify-content: center;
+
+        position: relative;
+        bottom: 0;
+        margin-left: auto;
+      }
     }
     .answer {
-      font-style: 20px;
+      p {
+        font-style: 20px;
+        padding: 10px 15px 15px 30px;
+        word-break: keep-all;
+      }
     }
   }
 }
