Style: 전역 스타일 수정
패딩 및 마진값 수정

Change-Id: I6393b9a7d2e2ca0420925801982017f71df1890a

--- a/web/src/styles/globals.css
+++ b/web/src/styles/globals.css
@@ -16,10 +16,11 @@ body {
 }
 
 main {
-  padding: 80px 0 0 0;
-  margin: 0 20vw 40px 20vw;
-  width: 60vw;
+  padding: 0;
   min-height: 100vh;
+  .container {
+    padding: 70px 0 0 0;
+  }
 }
 /* 타블렛 이하 */
 @media screen and (max-width: 1023px) {
