--- a/web/src/containers/Home/Home.module.scss
+++ b/web/src/containers/Home/Home.module.scss
@@ -1,7 +1,107 @@
-.google-btn {
-  position: relative;
-  height: 100px;
-  width: auto;
-  aspect-ratio: 646 / 250;
-  display: block;
+.scroll {
+  // overflow-y: scroll;
+  // scroll-snap-type: y mandatory;
+  // scroll-behavior: smooth;
+}
+
+.section {
+  scroll-snap-align: center;
+
+  perspective: 500px;
+  height: 100vh;
+}
+.lastSection {
+  height: 0vh;
+}
+
+div.section1 {
+  box-sizing: border-box;
+  background-color: var(--color-main4);
+  padding: 70px 10vw 0 10vw;
+  height: 100vh;
+
+  display: flex;
+
+  .screenshots {
+    height: 100%;
+    width: 60%;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+    .screen {
+      position: relative;
+      height: 70%;
+      width: auto;
+      aspect-ratio: 1080 / 2280;
+
+      border: solid black;
+
+      &:first-child {
+        position: absolute;
+        border: solid red;
+      }
+    }
+  }
+
+  p {
+    padding: 0;
+    margin: 0;
+  }
+
+  .text {
+    width: 30%;
+    margin: auto 0 auto 10px;
+
+    p:first-child {
+      font-size: 50px;
+      font-weight: 900;
+    }
+    p:last-of-type {
+      font-size: 30px;
+      font-weight: 600;
+    }
+  }
+}
+
+.downloadBtns {
+  margin: 30px 0;
+  width: 550px;
+  display: flex;
+  justify-content: space-between;
+
+  .google-btn {
+    position: relative;
+    height: 100px;
+    width: auto;
+    aspect-ratio: 646 / 250;
+    display: block;
+  }
+}
+
+div.service {
+  box-sizing: border-box;
+  background-color: var(--color-grey1);
+  padding: 70px 10vw 0 10vw;
+  height: 100vh;
+}
+div.section2 {
+  display: flex;
+
+  .text-container {
+    height: 100%;
+    width: 70%;
+    border: solid black;
+  }
+
+  .text {
+    // width: 70%;
+    margin: 10% 0;
+  }
+  .image {
+    border: solid black;
+    width: 30%;
+    margin: 10% 0;
+  }
 }
