--- a/web/src/styles/globals.css
+++ b/web/src/styles/globals.css
@@ -1,4 +1,6 @@
 html {
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
 }
 
@@ -18,6 +20,7 @@ body {
 main {
   padding: 0;
   min-height: 100vh;
+
   .container {
     padding: 70px 0 0 0;
   }
