--- a/web/src/containers/Home/Home.module.scss
+++ b/web/src/containers/Home/Home.module.scss
@@ -80,28 +80,63 @@ div.section1 {
   }
 }
 
-div.service {
+.service {
   box-sizing: border-box;
   background-color: var(--color-grey1);
   padding: 70px 10vw 0 10vw;
   height: 100vh;
-}
-div.section2 {
+
   display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  scroll-snap-align: center;
+  perspective: 500px;
 
   .text-container {
-    height: 100%;
-    width: 70%;
-    border: solid black;
+    width: 50%;
+    height: 60%;
   }
 
-  .text {
-    // width: 70%;
-    margin: 10% 0;
-  }
-  .image {
-    border: solid black;
-    width: 30%;
-    margin: 10% 0;
+  .image-container {
+    width: auto;
+    height: 80%;
+    aspect-ratio: 9 / 16;
+    position: relative;
+    max-height: 90vh;
+    overflow: hidden;
+
+    position: relative;
+    z-index: 3;
+    background: white;
+    overflow: hidden;
+    display: block;
+    border-radius: 1px;
+    -webkit-box-shadow: 0 0 0 3px #111;
+    box-shadow: 0 0 0 3px #111;
+
+    width: auto;
+    height: 700px;
+    aspect-ratio: 9 / 17;
+    background: black;
+    border-radius: 34px;
+    padding: 45px 10px;
+
+    .screen {
+      width: 100%;
+      position: relative;
+      height: 100%;
+      z-index: 3;
+      background: white;
+      overflow: hidden;
+      display: block;
+      border-radius: 1px;
+      -webkit-box-shadow: 0 0 0 3px #111;
+      box-shadow: 0 0 0 3px #111;
+
+      border-radius: 14px;
+      -webkit-box-shadow: none;
+      box-shadow: none;
+    }
   }
 }
