--- a/web/src/containers/Mobile/mobile.module.scss
+++ b/web/src/containers/Mobile/mobile.module.scss
@@ -1,6 +1,10 @@
 .mobile-container {
-  border: solid red;
+  // border: solid red;
+  margin-top: 10px;
   box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .device {
