--- a/web/src/containers/Home/Home.module.scss
+++ b/web/src/containers/Home/Home.module.scss
@@ -17,7 +17,7 @@
 div.section1 {
   box-sizing: border-box;
   background-color: var(--color-main4);
-  padding: 70px 10vw 0 10vw;
+  padding: 70px 5vw 0 5vw;
   height: 100vh;
 
   display: flex;
@@ -34,13 +34,17 @@ div.section1 {
       position: relative;
       height: 70%;
       width: auto;
-      aspect-ratio: 1080 / 2280;
+      aspect-ratio: 9 / 16;
 
       border: solid black;
+
+      margin: 0 60px;
 
       &:first-child {
         position: absolute;
         border: solid red;
+        z-index: 10;
+        margin: 0;
       }
     }
   }
@@ -51,16 +55,28 @@ div.section1 {
   }
 
   .text {
-    width: 30%;
-    margin: auto 0 auto 10px;
+    width: 50%;
+    margin: auto 0 auto 50px;
 
-    p:first-child {
-      font-size: 50px;
-      font-weight: 900;
+    .title {
+      height: 100px;
+      width: auto;
+      aspect-ratio: 702 / 243;
+      position: relative;
+      margin-bottom: 30px;
     }
-    p:last-of-type {
-      font-size: 30px;
+
+    p {
+      font-size: 40px;
       font-weight: 600;
+
+      display: inline;
+      overflow-y: hidden;
+      white-space: nowrap;
+      span {
+        color: var(--color-point1);
+        font-weight: 800;
+      }
     }
   }
 }
