--- a/web/src/containers/Home/Home.module.scss
+++ b/web/src/containers/Home/Home.module.scss
@@ -11,7 +11,7 @@
   height: 100vh;
 }
 .lastSection {
-  height: 0vh;
+  height: 0;
 }
 
 div.section1 {
@@ -19,7 +19,6 @@ div.section1 {
   background-color: var(--color-main4);
   padding: 70px 5vw 0 5vw;
   height: 100vh;
-
   display: flex;
 
   .screenshots {
@@ -35,9 +34,7 @@ div.section1 {
       height: 70%;
       width: auto;
       aspect-ratio: 9 / 16;
-
       border: solid black;
-
       margin: 0 60px;
 
       &:first-child {
@@ -153,6 +150,66 @@ div.section1 {
       border-radius: 14px;
       -webkit-box-shadow: none;
       box-shadow: none;
+    }
+  }
+}
+
+.end-container {
+  position: relative;
+
+  width: 100%;
+  height: 65vh;
+
+  padding: 10vh 0;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .image {
+    width: 100vw;
+    z-index: 0;
+  }
+
+  .title {
+    z-index: 1;
+
+    width: 100%;
+    height: 50%;
+    margin-top: 3%;
+
+    p {
+      padding: 0;
+      margin: 0;
+      color: var(--color-grey8);
+    }
+    p:first-child {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 80px;
+      font-weight: 600;
+      .logo {
+        display: inline-block;
+        position: relative;
+        width: 200px;
+        height: auto;
+        aspect-ratio: 702 / 243;
+
+        margin: 0 20px;
+      }
+    }
+    p:last-child {
+      text-align: center;
+      font-size: 50px;
+      font-weight: 800;
+      overflow-y: hidden;
+      white-space: nowrap;
+
+      span {
+        color: var(--color-main1);
+        font-weight: 900;
+      }
     }
   }
 }
