--- a/web/src/containers/Mobile/mobile.module.scss
+++ b/web/src/containers/Mobile/mobile.module.scss
@@ -1,13 +1,40 @@
 .mobile-container {
   // border: solid red;
-  margin-top: 10px;
+  margin-top: 20px;
+  height: 90vh;
   box-sizing: border-box;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
+.text {
+  z-index: 10;
+  position: absolute;
+  left: 10vw;
+
+  & p {
+    padding: 0;
+    margin: 0;
+    color: var(--color-grey8);
+
+    &:first-child {
+      font-size: 20px;
+      color: var(--color-grey6);
+    }
+
+    font-weight: 600;
+    font-size: 50px;
+
+    span {
+      color: var(--color-point1);
+      font-weight: 800;
+    }
+  }
+}
+
 .device {
+  margin-left: 35vw;
   display: inline-block;
   position: relative;
   -webkit-box-sizing: content-box !important;
