Feat: 원스토어 삭제 및 구글플레이 큐알코드 삽입
Change-Id: I8696ca38d5cc2dbff267d8517029a45fe6d9de94

--- a/web/src/containers/Home/Home.module.scss
+++ b/web/src/containers/Home/Home.module.scss
@@ -82,9 +82,10 @@ div.section1 {
 
 .downloadBtns {
   margin: 30px 0;
-  width: 550px;
+  width: auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
+  align-items: center;
 
   .google-btn {
     position: relative;
@@ -92,6 +93,12 @@ div.section1 {
     width: auto;
     aspect-ratio: 646 / 250;
     display: block;
+  }
+  .qrcode {
+    position: relative;
+    margin: 0 30px;
+    height: 80px;
+    width: 80px;
   }
 }
 
