Feat: ucc 자리 생성  및 image style 수정
Change-Id: I712938d35b1fc557f1da689c85877b9ba174301b

--- a/web/src/containers/Home/Home.module.scss
+++ b/web/src/containers/Home/Home.module.scss
@@ -80,6 +80,19 @@ div.section1 {
   }
 }
 
+div.ucc {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .uccFrame {
+    margin-top: 60px;
+    position: relative;
+    height: 80%;
+    width: 80%;
+  }
+}
+
 .downloadBtns {
   margin: 30px 0;
   width: auto;
